tests/bad/init_abstract_struct.glaz
@[abstract]
struct Abs { }

fn main() {
	_ = Abs{};
}
